# macro_deck_python

./: .gitignore  README.md  __main__.py  pyproject.toml  requirements.txt  setup.py
cli/: scaffold.py
core/: config_manager.py
gui/: editor_client.py  pad_client.py  tray.py  web_config.py
launchers/: MacroDeck.desktop  run.bat
macro_deck.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
macro_deck_python/: __init__.py  __main__.py
models/: action_button.py  profile.py  slider.py  variable.py
plugins/: base.py  plugin_manager.py
plugins/builtin/analog_slider/: analog_output.py  main.py  manifest.json  registry.py  slider_manager.py
plugins/builtin/backup_import/: README.md  __init__.py  main.py  manifest.json
plugins/builtin/commands_plugin/: main.py  manifest.json
plugins/builtin/keyboard_macro/: injector.py  key_map.py  main.py  manifest.json
plugins/builtin/keyboard_plugin/: main.py  manifest.json
sdk/: __init__.py  api.py  decorators.py  plugin_base.py
sdk/gui/: editor_client.py  pad_client.py
sdk/models/: action_button.py  profile.py
sdk/services/: action_executor.py
sdk/websocket/: server.py
services/: action_executor.py  extension_store.py  hot_reload.py  icon_manager.py  profile_manager.py  update_service.py  variable_manager.py
tests/: test_all.py  test_analog_slider.py  test_integration.py  test_keyboard_macro.py  test_macro_keys.py  test_sdk.py
utils/: condition.py  folder_utils.py  keyboard_layout.py  keyboard_tester.py  logger.py  template.py
websocket/: protocol.py  server.py
(+9 files in other folders)
