[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-deck"
version = "2.14.1"
description = "Macro Deck – Python rewrite of the C# server app"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
dependencies = [
    "websockets>=12.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
full = [
    "pystray>=0.19.4",
    "Pillow>=10.0.0",
    "pyautogui>=0.9.54",
    "psutil>=5.9.0",
    "cryptography>=41.0.0",
]

[project.scripts]
macro-deck = "macro_deck_python.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["macro_deck_python*"]
